--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<div id="app">
-    {{message}}
-</div>
-<script type="module">
-    import { ToyVue as Vue } from './toy-vue.js'
-</script>
-
-const app = new Vue({
-    el: "#app",
-    data: {
-        message: "hello vue!"
-    }
-})
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="app">
+        {{message}}
+    </div>
+    <div id="app6">
+        <input type="text" v-model="input">
+        <h3>{{input}}</h3>
+    </div>
+    <script type="module">
+        import { ToyVue as Vue } from './toy-vue.js'
+        const app = new Vue({
+            el: "#app",
+            data: {
+                message: "hello vue!"
+            }
+        })
+        const app6 = new Vue({
+            el: "#app6",
+            data: {
+                input: "111"
+            }
+        })
+    </script>
+</body>
+</html>
